Compiled but integratoin tests not working